app/assets/stylesheets/accounts.css.sass
.left-sidebar 
  background: url("http://cloudspokes.s3.amazonaws.com/left-sidebar-bg.gif") repeat-y scroll 0 0 transparent

#account
  .sidebar 
    width: 241px
  .widecolumn 
    width: 680px
  .menu-separator 
    border-bottom: 1px solid #E5E5E5
    margin-bottom: 14px
    padding-bottom: 12px
  .menu
    margin-bottom: 26px
    overflow: hidden
    position: relative
    width: 241px
    ul
      padding: 0
    li
      height: 35px
      line-height: 35px
      margin-bottom: 6px
      width: 219px
      a
        background: url("http://cloudspokes.s3.amazonaws.com/menu-bg.gif") no-repeat scroll 0 0 transparent
        display: block
        font-size: 17px
        height: 35px
        line-height: 35px
        overflow: hidden
        padding: 0 12px 0 15px
        position: relative
      a:hover
        background-position: 0 -35px
        color: #FFFFFF
        text-decoration: none
      a.active
        background-position: 0 -35px
        color: #FFFFFF
        text-decoration: none 
 
  .widecolumn
    #project-overview
      .box
        background-image: url("http://cloudspokes.s3.amazonaws.com/project-ov-bg.gif")
        margin-bottom: 5px
        background-position: 0 0
        background-repeat: repeat-y
      
      .box-b
        background-image: url("http://cloudspokes.s3.amazonaws.com/project-ov-b.gif")
      .box-t
        background-position: 0 0
        background-image: url("http://cloudspokes.s3.amazonaws.com/project-ov-t.gif")
        background-repeat: no-repeat
        padding: 10px
        .col-left
          display: inline
          float: left
          width: 405px
          .checkbox
            float: left
            padding-right: 5px
          h4
            padding-bottom: 10px
          p
            color: #666666
            padding: 0px
            font-family: 13px/16px Arial,Sans-Serif
            text-align: left

        .col-right
          display: inline
          float: right
          position: relative
          width: 214px
        
        .text-holder
          width: 490px
          p
            padding: 0 0 5px
          span
            color: #999
    #account
      margin-right: -20px
      position: relative
      width: 700px
      h3
        margin-bottom: 20px
        color: #6699C9
        font-size: 20px
        font-weight: normal
      label
        display: inline
        float: left
        line-height: 28px
        margin-right: 6px
        text-align: right
        width: 120px

      input
        background: none repeat scroll 0 0 #FFFFFF
        border: 1px solid #CCCCCC
        font: 11px Arial,Sans-Serif
        display: inline
        float: left
        font-size: 13px
        color: #666666
      .txt
        margin-bottom: 10px
        padding: 6px 5px
        width: 120px
        height: 16px
      .required
        color: Red
      .Uname
        margin-top: 6px
      .field
        margin-bottom: 10px
        padding: 6px 5px
        width: 368px
        height: 16px
      select
        display: inline
        float: left
        margin: 6px 24px 0 0
        width: 162px
      .txtsm
        margin-bottom: 10px
        margin-right: 10px
        padding: 6px 5px
        width: 50px
      .large
        width: 200px
      .sm
        line-height: 28px
        margin-right: 6px
        text-align: right
        width: 70px
        height: 16px
            
#outstanding-reviews
  font-size: 12px
  background: #fff
  margin-bottom: 50px
  width: 650px
  border-collapse: collapse
  text-align: left

#outstanding-reviews th
  font-size: 14px
  font-weight: normal
  color: #6699C9
  padding: 10px 8px
  border-bottom: 2px solid

#outstanding-reviews td
  border-bottom: 1px solid #ccc
  padding: 6px 8px

#button-container
  margin-left: 100px
  margin-top: 15px

#profile
  label
    display: inline
    float: left
    line-height: 28px
    margin-right: 6px
    text-align: right
    width: 120px
  textarea
    color: #666666
    display: block
    font-size: 14px
    height: 84px
    width: 448px
    font-size: 13px
    padding: 6px 5px
    margin-bottom: 10px
  .spacer
    padding-bottom: 5px
  input
    background: none repeat scroll 0 0 #FFFFFF
    border: 1px solid #CCCCCC
    font: 11px Arial,Sans-Serif
    display: inline
    font-size: 13px
    color: #666666
  .field
    margin-bottom: 10px
    padding: 6px 5px
    width: 150px
    height: 16px
  .file
    margin-bottom: 50px
    margin-left: 10px
    padding: 6px 5px
    width: 336px
    height: 16px
  .profile-pic
    margin: 10px
  .txt
    margin-bottom: 10px
    padding: 6px 5px
    width: 120px
    height: 16px
  .display
    padding: 6px 5px

